# instagram-unfollower-tracker-meerkit

./: .gitignore  DEV.md  LICENSE  README.md  SECURITY.md  get_current_followers.py  insta_interface.py  insta_interface_exceptions.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: app.py  config.py  extensions.py  scan_worker.py
backend/db/: db_handler.py  schemas.py
backend/routes/: auth.py  automation.py  history.py  images.py  predict.py  scan.py  tasks.py
backend/services/: account_handler.py  auth.py  auth_service.py  automation_runner.py  automation_service.py  db_service.py  downloader.py  image_cache.py  instagram_api_usage.py  instagram_gateway.py  instagram_response_cache.py  persistence.py  prediction_runner.py  relationship_cache.py  scan_runner.py  (+1 more)
docs/: api-reference.md  architecture.md  backend.md  changelog.md  contributing.md  database.md  development.md  frontend.md  index.md  prediction-algorithm.md  setup.md  showcase.md
frontend/: package-lock.json  package.json
meerkit/: app.py  config.py  exceptions.py
tests/: fetch_following_users.py  test_auth_response_sanitization.py  test_auth_usage_routes.py  test_automation_alt_filtering.py  test_automation_cache_metrics_routes.py  test_automation_following_users_route.py  test_automation_heartbeat.py  test_history_accessibility_badge.py  test_history_routes.py  test_instagram_gateway_cache.py  test_prediction_metadata.py  test_prediction_routes.py  test_scan_force_refresh.py  test_target_user_fetching.py
(+50 files in other folders)
