[project]
name = "no-follow-insta"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "python-dotenv>=1.1.1",
    "dotenv>=0.9.9",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pylance>=3.0.0",
    "ruff>=0.15.6",
    "debugpy>=1.8.20",
]
